hive-macro/tests/macro/should_fail/attribute_keys.rs
#[hive_macro::hive_test(wrong_key = 1)]
fn test() {}

fn main() {}
